fixes #202, text is visible in light and dark mode for tables, breadcrumbs, blockquotes, and tabs

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -36,7 +36,6 @@
   --ifm-color-primary-lightest: rgb(146, 224, 208);
   --ifm-code-font-size: 100%;
   --ifm-font-family-base: 'Lato', sans-serif;
-  --ifm-font-color-base: var(--primary-blue);
   --ifm-spacing-horizontal: 15px;
   --ifm-line-height-base: 1.85;
 
